--- a/products.html
+++ b/products.html
@@ -44,7 +44,7 @@
             </a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="about.html">x</a>
+            <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
           </li>
           <li class="nav-item active px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="products.html">x</a>
@@ -92,7 +92,7 @@
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-02.jpg" alt="">
         <div class="product-item-description d-flex ml-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">X</p>
+            <p class="mb-0">x</p>
           </div>
         </div>
       </div>
