--- a/index.html
+++ b/index.html
@@ -73,18 +73,13 @@
             “Kids these days…” The reality is kids are growing up with a ton of screen time. Rather it
             is them being online doing homework, on their phones, watching Netflix… there will be a
             very real premium for people who are good with face to face interactions. Volleyball will
-            force them to interact with people face to face; coaches, teammates, officials.. etc. Unlike
-            Chess, the ball is only in the air for mere moments, so communication and decisions must
-            be quickly thought out, communicated, and executed, with the margin for error getting
-            smaller and smaller as they progress through the sport. Now the question of, “why
+            force them to interact with people face to face; coaches, teammates, officials.. etc. Now the question of, “why
             volleyball” is clear, volleyball is a fun and healthy way for kids to learn life lessons that will
-            give them an advantage in a quickly changing world. It is also something they can continue
-            to do well into their 20’s, 30’s, even into their 50’s if they want to. So give your child the
-            gift of volleyball today.
+            give them an advantage in a quickly changing world.
           </p>
-          <div class="intro-button mx-auto">
+          <!-- <div class="intro-button mx-auto">
             <a class="btn btn-primary btn-xl" href="#">x</a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -96,10 +91,14 @@
         <div class="col-xl-9 mx-auto">
           <div class="cta-inner text-center rounded">
             <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">x</span>
-              <span class="section-heading-lower">x</span>
+              <span class="section-heading-upper">Why</span>
+              <span class="section-heading-lower">Malibu Volleyball Club?</span>
             </h2>
-            <p class="mb-0">x</p>
+            <p class="mb-0">We offer a tremendous coaching staff with years of successful experience coaching at the
+              high school, club, and college levels. However, our experience is just one key factor,
+              because the bigger key is how we figure out how to make your child successful in their
+              journey. Our coaching philosophy has two cornerstones: #1 teaching life lessons through
+              sport and #2 understanding why you do what you do.</p>
           </div>
         </div>
       </div>
