--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+      <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item active px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="index.html">About Us
@@ -56,7 +56,7 @@
             <a class="nav-link text-uppercase text-expanded" href="faq.html">FAQ</a>
           </li>
         </ul>
-      </div>
+      </div> -->
     </div>
   </nav>
 
