--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
+      <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item active px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="index.html">About Us
@@ -44,19 +44,19 @@
             </a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="training.html">Training Schedules</a>
+            <a class="nav-link text-uppercase text-expanded" href="training.html">ISPE - Independent Study Physical Education</a>
           </li>
-          <li class="nav-item px-lg-4">
+          <!-- <li class="nav-item px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="coaches.html">Coaches</a>
           </li>
-          <li class="nav-item px-lg-4">
+          <li class="nav-item px-lg-4"> 
             <a class="nav-link text-uppercase text-expanded" href="register.html">Register Now</a>
           </li>
           <li class="nav-item px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="faq.html">FAQ</a>
-          </li>
+          </li> -->
         </ul>
-      </div> -->
+      </div>
     </div>
   </nav>
 
