--- a/ispe.html
+++ b/ispe.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>BMalibu Volleyball Club</title>
+    <title>ISPE</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -26,7 +26,7 @@
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
       <span class="site-heading-upper text-primary mb-3">Malibu Volleyball Club</span>
-      <span class="site-heading-lower">Best Malibu Volleyball Club Since 2018!</span>
+      <span class="site-heading-lower">ISPE - Independent Study Physical Education</span>
     </h1>
 
     <!-- Navigation -->
@@ -39,19 +39,19 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="index.html">Home
+              <a class="nav-link text-uppercase text-expanded" href="index.html">Malibu VBC
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
-            </li>
+              <a class="nav-link text-uppercase text-expanded" href="ispe.html">ISPE - Independent Study Physical Education</a>
+            <!-- </li>
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="products.html">x</a>
             </li>
             <li class="nav-item active px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="store.html">x</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
