--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item active px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="index.html">About Us
+            <a class="nav-link text-uppercase text-expanded" href="index.html">Malibu VBC
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="training.html">ISPE - Independent Study Physical Education</a>
+            <a class="nav-link text-uppercase text-expanded" href="ispe.html">ISPE - Independent Study Physical Education</a>
           </li>
           <!-- <li class="nav-item px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="coaches.html">Coaches</a>
