--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
 
 <body>
 
-  <h1 class="site-heading text-center text-white d-none d-lg-block">
-    <span class="site-heading-upper text-primary mb-3">Malibu Volleyball Club</span>
-    <span class="site-heading-lower">Best Malibu Volleyball Club Since 2018!</span>
-  </h1>
+  
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
@@ -60,7 +57,11 @@
     </div>
   </nav>
 
-  
+  <h1 class="site-heading text-center text-white d-none d-lg-block">
+    <span class="site-heading-upper text-primary mb-3">Malibu Volleyball Club</span>
+    <span class="site-heading-lower">Best Malibu Volleyball Club Since 2018!</span>
+  </h1>
+
   <section class="page-section clearfix">
     <div class="container">
       <div class="intro">
@@ -103,6 +104,22 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="cta-inner text-center rounded col-xl-2 mx-auto">
+      <p class="address mb-5">
+        <em>
+          <strong>Malibu Volleyball Club</strong>
+          <br>
+          Malibu, California
+        </em>
+      </p>
+      <p class="mb-0">
+        <small>
+          <em>mizunocamps@hotmail.com</em>
+        </small>
+        <br>
+        (310) 482-0212
+      </p>
     </div>
   </section>
 
