--- a/ispe.html
+++ b/ispe.html
@@ -44,7 +44,7 @@
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="ispe.html">ISPE - Independent Study Physical Education</a>
+              <a class="nav-link text-uppercase text-expanded" href="ispe.html">Independent Study Physical Education</a>
             <!-- </li>
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="products.html">x</a>
@@ -63,11 +63,19 @@
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
-                <span class="section-heading-upper">x</span>
-                <span class="section-heading-lower">x</span>
+                <span class="section-heading-upper">Malibu Volleyball Club</span>
+                <span class="section-heading-lower">ISPE - Independent Study Physical Education</span>
               </h2>
               <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
                 <li class="list-unstyled-item list-hours-item d-flex">
+                  
+                  <span class="ml-auto">Malibu Volleyball Club’s Sand Volleyball Program does fit the criteria for credit through the
+                    SMMUSD ISPE program. Special Pricing for those interested in receiving credit for ISPE. (other
+                    districts offer similar programs, for families outside of SMMUSD check with your academic
+                    advisor). Follow the links below for your school’s application. (SMMUSD Deadlines are
+                    December 11, 2020 for Spring 2021 and March 11, for Fall 2021)</span>
+                </li>
+                <!-- <li class="list-unstyled-item list-hours-item d-flex">
                   x
                   <span class="ml-auto">x</span>
                 </li>
@@ -90,25 +98,21 @@
                 <li class="list-unstyled-item list-hours-item d-flex">
                   x
                   <span class="ml-auto">x</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  x
-                  <span class="ml-auto">x</span>
-                </li>
+                </li> -->
               </ul>
               <p class="address mb-5">
                 <em>
-                  <strong>x</strong>
+                  <strong>Malibu Volleyball Club</strong>
                   <br>
-                  x
+                  Malibu, California
                 </em>
               </p>
               <p class="mb-0">
                 <small>
-                  <em>x</em>
+                  <em>mizunocamps@hotmail.com</em>
                 </small>
                 <br>
-                (xxx) xxx-xxxx
+                (310) 482-0212
               </p>
             </div>
           </div>
@@ -119,7 +123,7 @@
     <section class="page-section about-heading">
       <div class="container">
         <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/about.jpg" alt="">
-        <div class="about-heading-content">
+        <!-- <div class="about-heading-content">
           <div class="row">
             <div class="col-xl-9 col-lg-10 mx-auto">
               <div class="bg-faded rounded p-5">
@@ -134,7 +138,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
