--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="ispe.html">ISPE - Independent Study Physical Education</a>
+            <a class="nav-link text-uppercase text-expanded" href="ispe.html">Independent Study Physical Education</a>
           </li>
           <!-- <li class="nav-item px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="coaches.html">Coaches</a>
