--- a/ispe.html
+++ b/ispe.html
@@ -75,30 +75,15 @@
                     advisor). Follow the links below for your school’s application. (SMMUSD Deadlines are
                     December 11, 2020 for Spring 2021 and March 11, for Fall 2021)</span>
                 </li>
-                <!-- <li class="list-unstyled-item list-hours-item d-flex">
-                  x
-                  <span class="ml-auto">x</span>
+                <li class="list-unstyled-item list-hours-item d-flex">
+                  <a href="https://www.smmusd.org/Page/1299">Malibu High School ISPE</a>
+                  <span class="ml-auto"></span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  x
-                  <span class="ml-auto">x</span>
+                  <a href="https://www.smmusd.org/Page/2497">Malibu Middle School ISPE</a>
+                  <span class="ml-auto"></span>
                 </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  x
-                  <span class="ml-auto">x</span>
                 </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  x
-                  <span class="ml-auto">x</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  x
-                  <span class="ml-auto">x</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  x
-                  <span class="ml-auto">x</span>
-                </li> -->
               </ul>
               <p class="address mb-5">
                 <em>
