--- a/ispe.html
+++ b/ispe.html
@@ -94,7 +94,7 @@
               </p>
               <p class="mb-0">
                 <small>
-                  <em>mizunocamps@hotmail.com</em>
+                  <em>malibuvbc@gmail.com</em>
                 </small>
                 <br>
                 (310) 482-0212
