--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
     <span class="site-heading-upper text-primary mb-3">Malibu Volleyball Club</span>
-    <span class="site-heading-lower">Best Malibu Volleyball Club Since 2018!</span>
+    <span class="site-heading-lower"><span class="site-heading-upper text-primary mb-3"><p style="color:white; font-weight:100">Best Malibu Volleyball Club Since 2018!</p></span></span>
   </h1>
 
   <section class="page-section clearfix">
