--- a/ispe.html
+++ b/ispe.html
@@ -53,8 +53,8 @@
     </nav>
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
-      <span class="site-heading-upper text-primary mb-3">Malibu Volleyball Club</span>
-      <span class="site-heading-lower">Independent Study Physical Education</span>
+      <span class="site-heading-upper text-primary mb-3">Malibu Volleyball Club</style></span>
+      <span class="site-heading-lower"><span class="site-heading-upper text-primary mb-3"><p style="color:white; font-weight:100">Independent Study Physical Education</p></span></span>
     </h1>
 
     <section class="page-section cta">
@@ -64,7 +64,7 @@
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
                 <span class="section-heading-upper">Malibu Volleyball Club</span>
-                <span class="section-heading-lower">Independent Study Physical Education</span>
+                <span class="site-heading-upper text-primary mb-3"><p style="color:black;font-weight:100">Independent Study Physical Education</p></span>
               </h2>
               <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
                 <li class="list-unstyled-item list-hours-item d-flex">
