--- a/ispe.html
+++ b/ispe.html
@@ -39,7 +39,7 @@
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="ispe.html">Independent Study Physical Education</a>
+              <a class="nav-link text-uppercase text-expanded" href="ispe.html" style="text-decoration: none;">Independent Study Physical Education</a>
             <!-- </li>
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="products.html">x</a>
