--- a/index.html
+++ b/index.html
@@ -105,20 +105,23 @@
         </div>
       </div>
     </div>
+    <br>
+    <br>
+    <br>
     <div class="cta-inner text-center rounded col-xl-2 mx-auto">
-      <p class="address mb-5">
+      <p class="address mb-3">
         <em>
           <strong>Malibu Volleyball Club</strong>
           <br>
           Malibu, California
+          <br>
         </em>
-      </p>
-      <p class="mb-0">
+        (310) 482-0212
         <small>
-          <em>malibuvbc@gmail.com</em>
+          <em></em>
         </small>
         <br>
-        (310) 482-0212
+        malibuvbc@gmail.com
       </p>
     </div>
   </section>
