--- a/ispe.html
+++ b/ispe.html
@@ -23,7 +23,35 @@
   </head>
 
   <body>
+    <style>
+a:link {
+  text-decoration: none;
+  color: black;
+  font-style: normal;
+  font-family: 'Raleway';
+}
 
+a:visited {
+  text-decoration: none;
+  color: black;
+  font-style: normal;
+  font-family: 'Raleway';
+}
+
+a:hover {
+  text-decoration: none;
+  color: black;
+  font-style: normal;
+  font-family: 'Raleway';
+}
+
+a:active {
+  text-decoration: none;
+  color: black;
+  font-family: 'Raleway';
+  font-style: normal;
+}
+  </style>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
       <div class="container">
@@ -68,13 +96,13 @@
               </h2>
               <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  
                   <span class="ml-auto">Malibu Volleyball Club’s Sand Volleyball Program does fit the criteria for credit through the
                     SMMUSD ISPE program. Special Pricing for those interested in receiving credit for ISPE. (other
                     districts offer similar programs, for families outside of SMMUSD check with your academic
                     advisor). Follow the links below for your school’s application. (SMMUSD Deadlines are
                     December 11, 2020 for Spring 2021 and March 11, for Fall 2021)</span>
                 </li>
+                <br><br>
                 <li class="list-unstyled-item list-hours-item d-flex">
                   <a href="https://www.smmusd.org/Page/1299">Malibu High School ISPE</a>
                   <span class="ml-auto"></span>
@@ -85,25 +113,31 @@
                 </li>
                 </li>
               </ul>
-              <p class="address mb-5">
-                <em>
-                  <strong>Malibu Volleyball Club</strong>
-                  <br>
-                  Malibu, California
-                </em>
-              </p>
-              <p class="mb-0">
-                <small>
-                  <em>malibuvbc@gmail.com</em>
-                </small>
-                <br>
-                (310) 482-0212
-              </p>
+
             </div>
           </div>
         </div>
       </div>
-    </section>
+<br><br>
+      <div class="container">
+    <div class="cta-inner text-center rounded col-xl-7 mx-auto">
+      <p class="address mb-3">
+        <em>
+          <strong>Malibu Volleyball Club</strong>
+          <br>
+          Malibu, California
+          <br>
+        </em>
+        (310) 482-0212
+        <small>
+          <em></em>
+        </small>
+        <br>
+        malibuvbc@gmail.com
+      </p>
+    </div>
+    </div>
+  </section>
 
     <section class="page-section about-heading">
       <div class="container">
