--- a/ispe.html
+++ b/ispe.html
@@ -104,11 +104,11 @@ a:active {
                 </li>
                 <br><br>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  <a href="https://www.smmusd.org/Page/1299">Malibu High School ISPE</a>
+                  <a href="https://www.smmusd.org/Page/1299"><strong>Malibu High School ISPE</strong></a>
                   <span class="ml-auto"></span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  <a href="https://www.smmusd.org/Page/2497">Malibu Middle School ISPE</a>
+                  <a href="https://www.smmusd.org/Page/2497"><strong><strong>Malibu Middle School ISPE</strong></strong></a>
                   <span class="ml-auto"></span>
                 </li>
                 </li>
