--- a/coaches.html
+++ b/coaches.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Independent Study Physical Education</title>
+    <title>Our Coaches</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,15 +44,16 @@
           <ul class="navbar-nav mx-auto">
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="index.html">Malibu VBC
+
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="ispe.html">Independent Study Physical Education
+              <a class="nav-link text-uppercase text-expanded" href="ispe.html" style="text-decoration: none;">Independent Study Physical Education</a>
+            
+            <li class="nav-item px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="coaches.html">Coaches
                 <span class="sr-only">(current)</span>
               </a>
-              <li class="nav-item px-lg-4">
-                <a class="nav-link text-uppercase text-expanded" href="coaches.html">Coaches</a>
-              </li>
           </ul>
         </div>
       </div>
