--- a/coaches.html
+++ b/coaches.html
@@ -61,7 +61,7 @@
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
       <span class="site-heading-upper text-primary mb-3">Malibu Volleyball Club</style></span>
-      <span class="site-heading-lower"><span class="site-heading-upper text-primary mb-3"><p style="color:white; font-weight:100">Independent Study Physical Education</p></span></span>
+      <span class="site-heading-lower"><span class="site-heading-upper text-primary mb-3"><p style="color:white; font-weight:100">Our Coaches</p></span></span>
     </h1>
 
     <section class="page-section cta">
@@ -70,52 +70,18 @@
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
-                <span class="section-heading-upper">Malibu Volleyball Club</span>
-                <span class="site-heading-upper text-primary mb-3"><p style="color:black;font-weight:100">Independent Study Physical Education</p></span>
+                <span class="section-heading-upper">x</span>
+                <span class="site-heading-upper text-primary mb-3"><p style="color:black;font-weight:100">x</p></span>
               </h2>
-              <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  <span class="ml-auto">Malibu Volleyball Club’s Sand Volleyball Program does fit the criteria for credit through the
-                    SMMUSD ISPE program. Special Pricing for those interested in receiving credit for ISPE. (other
-                    districts offer similar programs, for families outside of SMMUSD check with your academic
-                    advisor). Follow the links below for your school’s application. (SMMUSD Deadlines are
-                    December 11, 2020 for Spring 2021 and March 11, for Fall 2021)</span>
-                </li>
-                <br><br>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  <a href="https://www.smmusd.org/Page/1299"><strong>Malibu High School ISPE</strong></a>
-                  <span class="ml-auto"></span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  <a href="https://www.smmusd.org/Page/2497"><strong><strong>Malibu Middle School ISPE</strong></strong></a>
-                  <span class="ml-auto"></span>
-                </li>
-                </li>
-              </ul>
+              <p class="mb-0">
+                  x
+              </p>
 
             </div>
           </div>
         </div>
       </div>
-<br><br>
-      <div class="container">
-    <div class="cta-inner text-center rounded col-xl-7 mx-auto">
-      <p class="address mb-3">
-        <em>
-          <strong>Malibu Volleyball Club</strong>
-          <br>
-          Malibu, California
-          <br>
-        </em>
-        (310) 482-0212
-        <small>
-          <em></em>
-        </small>
-        <br>
-        malibuvbc@gmail.com
-      </p>
-    </div>
-    </div>
+
   </section>
 
     <section class="page-section about-heading">
@@ -140,11 +106,12 @@
       </div>
     </section>
 
-    <footer class="footer text-faded text-center py-5">
-      <div class="container">
-        <p class="m-0 small">Copyright &copy; MalibuVBC 2021</p>
-      </div>
-    </footer>
+
+  <footer class="footer text-faded text-center py-5">
+    <div class="container">
+      <p class="m-0 small">Copyright &copy; MalibuVBC 2021</p>
+    </div>
+  </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
