--- a/ispe.html
+++ b/ispe.html
@@ -69,7 +69,7 @@
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
-                <span class="section-heading-upper">Malibu Volleyball Club</span>
+                <span class="section-heading-upper">Malibu VBC's</span>
                 <span class="site-heading-upper text-primary mb-3"><p style="color:black;font-weight:100">Independent Study Physical Education</p></span>
               </h2>
               <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
@@ -139,12 +139,12 @@
       </div>
     </section>
 
-    <footer class="footer text-faded text-center py-5">
-      <div class="container">
-        <p class="m-0 small">Copyright &copy; MalibuVBC 2021</p>
-      </div>
-    </footer>
 
+  <footer class="footer text-faded text-center py-5">
+    <div class="container">
+      <p class="m-0 small">Copyright &copy; MalibuVBC 2021</p>
+    </div>
+  </footer>
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
