--- a/ispe.html
+++ b/ispe.html
@@ -70,7 +70,7 @@
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
                 <span class="section-heading-upper">Malibu VBC's</span>
-                <span class="site-heading-upper text-primary mb-3"><p style="color:black;font-weight:100">Independent Study Physical Education</p></span>
+                <span class="site-heading-upper text-primary mb-3"><p style="color:black;font-weight:100">ISPE</p></span>
               </h2>
               <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
                 <li class="list-unstyled-item list-hours-item d-flex">
