--- a/coaches.html
+++ b/coaches.html
@@ -83,6 +83,21 @@
                 Derek Saenz is the head coach of the boys and girls volleyball programs at Malibu High School.  With over 20 years coaching at the collegiate, club, and high school levels, he enters his 2nd season at Malibu HS.    He began his coaching career at his Alma mater, Granada Hills High, where he coached from 2000-2002.  He coached club at Santa Monica Beach Volleyball Club (2002-2004), then started Shock Volleyball Club in Thousand Oaks in 2004.   In 2008 Derek served as an assistant coach at West Chester University in Pennsylvania, eventually returning to Southern California in 2010 to coach and at Mizuno Long Beach.  Derek is also Men's and Women's head coach for club sand at Pepperdine University, as well as the director of Malibu Volleyball Club.  
               </p>
                 
+            </h2>
+            <br><br>
+
+
+              <h2>
+              <span class="site-heading-upper text-primary mb-3"><p style="color:black;font-weight:100">Elina Domnidou</p></span>
+            </h2>
+            <p class="mb-0" float="right">
+              <!-- <img src="" height="30%" width="30%" alt="Elina Domnidou" style="float: left; margin: 3px 12px 3px 0px; "> -->
+              Elina Domnidou, has competed internationally representing the Greek National team and currently participating in the P1440 AVP program run by Olympian Kerri Walsh. Outside of participating in beach volleyball, she has also played indoor at University of Winnipeg and pro volleyball in Austria. Her coaching experience includes both indoor and beach but is particularly excited to share her knowledge for beach because that’s where her passion lies. While the experience and skill levels may vary with this group, her goal is to introduce the fundamentals of beach volleyball in a fun and positive manner.
+
+              </p>
+            
+
+
             </div>
           </div>
         </div>
