--- a/coaches.html
+++ b/coaches.html
@@ -88,10 +88,10 @@
 
 
               <h2>
-              <span class="site-heading-upper text-primary mb-3"><p style="color:black;font-weight:100">Elina Domnidou</p></span>
+              <span class="site-heading-upper text-primary mb-3"><p style="color:black;font-weight:100">Elina Domnidou - Beach Coach</p></span>
             </h2>
             <p class="mb-0" float="right">
-              <!-- <img src="" height="30%" width="30%" alt="Elina Domnidou" style="float: left; margin: 3px 12px 3px 0px; "> -->
+              <img src="img/IMG_2709.png" height="30%" width="30%" alt="Elina Domnidou" style="float: left; margin: 3px 12px 3px 0px; ">
               Elina Domnidou, has competed internationally representing the Greek National team and currently participating in the P1440 AVP program run by Olympian Kerri Walsh. Outside of participating in beach volleyball, she has also played indoor at University of Winnipeg and pro volleyball in Austria. Her coaching experience includes both indoor and beach but is particularly excited to share her knowledge for beach because that’s where her passion lies. While the experience and skill levels may vary with this group, her goal is to introduce the fundamentals of beach volleyball in a fun and positive manner.
 
               </p>
