--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
       <div class="intro">
         <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
-          <h2 class="section-heading mb-4">
-            <span class="section-heading-upper">Why</span>
-            <span class="section-heading-lower">Volleyball? </span>
-          </h2>
+          <h3 class="section-heading mb-4">
+            <span class="section-heading-lower">Why</span>
+            <span class="section-heading-upper">Volleyball? </span>
+          </h3>
           <p class="mb-3">
             “Kids these days…” The reality is kids are growing up with a ton of screen time. Rather it
             is them being online doing homework, on their phones, watching Netflix… there will be a
@@ -96,8 +96,8 @@
         <div class="col-xl-9 mx-auto">
           <div class="cta-inner text-center rounded">
             <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">Why</span>
-              <span class="section-heading-lower">Malibu Volleyball Club?</span>
+              <span class="section-heading-lower">Why</span>
+              <span class="section-heading-upper">Malibu Volleyball Club?</span>
             </h2>
             <p class="mb-0">We offer a tremendous coaching staff with years of successful experience coaching at the
               high school, club, and college levels. However, our experience is just one key factor,
