--- a/coaches.html
+++ b/coaches.html
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="index.html">Malibu VBC
+              <a class="nav-link text-uppercase text-expanded" href="index.html">Home
 
               </a>
             </li>
