--- a/ispe.html
+++ b/ispe.html
@@ -43,13 +43,14 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="index.html">Malibu VBC
+              <a class="nav-link text-uppercase text-expanded" href="index.html">Home
               </a>
             </li>
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="ispe.html">Independent Study Physical Education
                 <span class="sr-only">(current)</span>
               </a>
+            </li>
               <li class="nav-item px-lg-4">
                 <a class="nav-link text-uppercase text-expanded" href="coaches.html">Coaches</a>
               </li>
