--- a/coaches.html
+++ b/coaches.html
@@ -50,7 +50,7 @@
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="ispe.html" style="text-decoration: none;">Independent Study Physical Education</a>
             
-            <li class="nav-item px-lg-4">
+            <li class="nav-item active px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="coaches.html">Coaches
                 <span class="sr-only">(current)</span>
               </a>
