--- a/ispe.html
+++ b/ispe.html
@@ -46,7 +46,7 @@
               <a class="nav-link text-uppercase text-expanded" href="index.html">Home
               </a>
             </li>
-            <li class="nav-item px-lg-4">
+            <li class="nav-item active px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="ispe.html">Independent Study Physical Education
                 <span class="sr-only">(current)</span>
               </a>
