--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
       
-      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">x</a>  <div  style="color: rgba(230, 167, 86, 0.9)">Malibu VBC</div>        
+      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">x</a>  <div class="font-weight-bold text-uppercase" style="color: rgba(230, 167, 86, 0.9)">Malibu VBC</div>        
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
