home/coaches/ispe"

--- a/ispe.html
+++ b/ispe.html
@@ -46,14 +46,15 @@
               <a class="nav-link text-uppercase text-expanded" href="index.html">Home
               </a>
             </li>
+            <li class="nav-item px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="coaches.html">Coaches</a>
+            </li>
             <li class="nav-item active px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="ispe.html">Independent Study Physical Education
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-              <li class="nav-item px-lg-4">
-                <a class="nav-link text-uppercase text-expanded" href="coaches.html">Coaches</a>
-              </li>
+
           </ul>
         </div>
       </div>
@@ -68,31 +69,26 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
-            <div class="cta-inner text-center rounded">
+            <div class="cta-inner rounded">
               <h2 class="section-heading mb-5">
-                <span class="section-heading-lower">Malibu VBC's</span>
-                <span class="section-heading-upper">Independent Study Physical Education</span>
+                <span class="section-heading-lower text-center ">Malibu VBC's</span>
+                <span class="section-heading-upper text-center ">Independent Study Physical Education</span>
               </h2>
-              <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  <span class="ml-auto">Malibu Volleyball Club’s Sand Volleyball Program does fit the criteria for credit through the
-                    SMMUSD ISPE program. Special Pricing for those interested in receiving credit for ISPE. (other
-                    districts offer similar programs, for families outside of SMMUSD check with your academic
-                    advisor). Follow the links below for your school’s application. (SMMUSD Deadlines are
-                    December 11, 2020 for Spring 2021 and March 11, for Fall 2021)</span>
-                </li>
-                <br><br>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  <a href="https://www.smmusd.org/Page/1299"><strong>Malibu High School ISPE</strong></a>
-                  <span class="ml-auto"></span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  <a href="https://www.smmusd.org/Page/2497"><strong><strong>Malibu Middle School ISPE</strong></strong></a>
-                  <span class="ml-auto"></span>
-                </li>
-                </li>
-              </ul>
 
+
+              <p class="mb-0">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Malibu Volleyball Club’s Sand Volleyball Program does fit the criteria for credit through the
+                SMMUSD ISPE program. Special Pricing for those interested in receiving credit for ISPE. (other
+                districts offer similar programs, for families outside of SMMUSD check with your academic
+                advisor). Follow the links below for your school’s application. (SMMUSD Deadlines are
+                December 11, 2020 for Spring 2021 and March 11, for Fall 2021)
+                </p>
+                <br><br>
+<p class="text-center font-weight-bold">
+                <a href="https://www.smmusd.org/Page/2497">Malibu Middle School ISPE</a>
+              </p><p class="text-center font-weight-bold">
+                <a href="https://www.smmusd.org/Page/1299">Malibu High School ISPE</a>
+              </p>
             </div>
           </div>
         </div>
